--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ go:
   - 1.6
   - 1.7
   - tip
+# Disable version 1.3, 1.4
+jobs: 
+  exclude:
+    - arch: ppc64le
+      go: 1.3
+    - arch: ppc64le
+      go: 1.4
